<resources>
    <string name="app_name">Inventory App</string>

    <!--INSERT MESSAGES-->
    <string name="insert_msg_success">Product saved with id: </string>
    <string name="insert_msg_error">Error with saving product.</string>
    <string name="insert_msg_dummy">Dummy products added to the database.</string>

    <!--UPDATE MESSAGES-->
    <string name="update_msg_success">Product updated successfully.</string>
    <string name="update_msg_error">Error with updating product.</string>
    <string name="stock_msg_success">Stock updated successfully.</string>
    <string name="stock_msg_error">Error with updating stock.</string>

    <!--DELETE MESSAGES-->
    <string name="delete_msg_success">Product deleted successfully.</string>
    <string name="delete_msg_error">Error with deleting product.</string>
    <string name="delete_msg_all">All products deleted successfully.</string>
    <string name="delete_dialog_msg">Are you sure you want to delete this product?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <!--DISCARD MESSAGES-->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>

    <!--ITEM-->
    <string name="item_sale_button">Sale</string>

    <!--EMPTY ITEM VALUES-->
    <string name="unknown_author">Unknown Author</string>
    <string name="unknown_supplier">Unknown Supplier</string>

    <!--EDITOR ACTIVITY-->
    <string name="empty_editor_title">Add Product</string>
    <string name="full_editor_title">Edit Product</string>
    <string name="product_section_title">Product Details</string>
    <string name="supplier_section_title">Supplier Details</string>
    <string name="hint_product_name">Product Name</string>
    <string name="hint_product_author">Author</string>
    <string name="hint_product_price">Price</string>
    <string name="hint_product_price_currency">$</string>
    <string name="hint_product_quantity">Quantity</string>
    <string name="hint_supplier_name">Supplier Name</string>
    <string name="hint_supplier_phone">Supplier Phone</string>
    <string name="error_can_not_save">Could not save product.\nSome fields are empty.</string>

    <!--DETAILS ACTIVITY-->
    <string name="details_activity_title">Product Details</string>
    <string name="details_product_section_title">Product Details</string>
    <string name="details_supplier_section_title">Supplier Details</string>
    <string name="details_btn_up_description">Increment Quantity Button</string>
    <string name="details_btn_down_description">Decrement Quantity Button</string>
    <string name="details_label_author">Author</string>
    <string name="details_label_price">Price</string>
    <string name="details_label_quantity">Quantity</string>
    <string name="details_label_buttons">More / Less</string>
    <string name="details_label_phone">Phone</string>
    <string name="details_call_btn">Call Supplier</string>

    <!--EMPTY STATE VIEW-->
    <string name="empty_view_title">No Products Found</string>
    <string name="empty_view_img">Empty Book Shop</string>
    <string name="empty_view_instructions">Please add a product to the inventory, by tapping the plus button below, or by adding Dummy Data from the menu, above.</string>
    <string name="empty_view_more_instructions">The Product Name and Supplier Phone fields are required. It\'s also recommended that you fill the Price and Quantity fields.</string>

    <!--MENU ACTIONS-->
    <string name="action_add_dummy_data">Add Dummy Data</string>
    <string name="action_delete_all_data">Delete All Entries</string>
    <string name="action_save">Save Product</string>
    <string name="action_edit">Edit Product</string>
    <string name="action_delete">Delete Product</string>
</resources>
